...
            end = 16.dp,
            bottom = 16.dp,
            top = contentPaddingOnTop
        ),
        verticalArrangement = Arrangement.spacedBy(12.dp),
        modifier = modifier
            .testTag("lazy_list_column")
    ) {
        items(listProduct, key = { it.id }) { item ->
            ProductItem(
                id = item.id,
                image = item.image,
                title = item.title,
...
